<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.brandonespana.wowbattlepets.activities.MainActivity">

    <TextView android:text="@string/MainActivityTitle"
        android:textSize="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/characterName"
        android:hint="@string/characterNameHint"
        android:layout_marginTop="30dp"
        android:layout_width="300dp"
        android:layout_height="50dp" />
    <AutoCompleteTextView
        android:id="@+id/realmName"
        android:hint="@string/realmNameHint"
        android:layout_marginTop="30dp"
        android:layout_width="300dp"
        android:layout_height="50dp">
    </AutoCompleteTextView>

    <Spinner
        android:id="@+id/localeSpinner"
        android:prompt="@string/localePrompt"
        android:layout_width="150dp"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/startButton"
        android:text="@string/startButtonText"
        android:onClick="launchPetRetrieval"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />


</LinearLayout>
