<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:src="@drawable/pet_type_aquatic"
        android:layout_width="85dp"
        android:layout_height="85dp" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:paddingLeft="10dp"
        android:layout_height="85dp">

        <TextView
            android:id="@+id/petName"
            android:text="@string/petName"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/creatureName"
            android:text="@string/creatureName"
            android:textSize="20dp"
            android:textStyle="italic"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/petLevel"
            android:text="@string/petLevel"
            android:textSize="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>